Issue #1003820 by ericduran | c4rl: Increase font and form element color contrast.

--- a/core.css
+++ b/core.css
@@ -463,7 +463,7 @@ select.form-select {
   padding:3px;
   border-width:1px;
   border-style:solid;
-  border-color:#ccc;
+  border-color:#ddd;
   background:#fff;
   color:#666;
   max-width:100%;
